--- a/聊天系统/html/chatpage.html
+++ b/聊天系统/html/chatpage.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/chatpage.css">
+    <link rel="stylesheet" href="../css/chatpage.css">
+    <link rel="stylesheet" href="../font/font_1899113_1gvxbnqtxiz/iconfont.css">
 </head>
 <body>
     <div class="chatbox">
-        <div class="header"><span><</span><span></span></div>
+        <div class="header"><span class="iconfont leftbtn">&#xe645;</span><span class="iconfont rightbtn">&#xe675;</span></div>
+    </div>
+    <div class="buttom">
+        <input type="text" class="textbox">
+        <button class="send">发送</button>
     </div>
 	<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
     <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.2/??flexible_css.js,flexible.js"></script>
