--- a/聊天系统/html/Main.html
+++ b/聊天系统/html/Main.html
@@ -51,6 +51,18 @@
                     }</script>
             </div>
             <input type="text" class="iconfont search" placeholder="&#xe616;搜索">
+            <div class="notice_area">
+                <div class="notice_infomation">
+                    <img src="../img/head_logo.jpg" class="notice_uheadimg">
+                    <div class="notice_left">
+                        <div class="notice_information">
+                            <p class="uname">kj</p>
+                            <p class="send_time">下午1:56</p>
+                        </div>
+                        <div class="notice_container">123456</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
