--- a/聊天系统/html/Main.html
+++ b/聊天系统/html/Main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,viewport-fit=cover">
     <link rel="stylesheet" href="../css/Main.css">
     <script src="../js/jquery-3.4.1/jquery-3.4.1.min.js"></script>
-
+    <link rel="stylesheet" href="../css/personal_homepage.css">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1837326_68xgxlax9a.css">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1898437_izt0yre64fj.css">
     <script src="../js/checkScreen.js"></script>
@@ -52,6 +52,33 @@
             </div>
             <input type="text" class="iconfont search" placeholder="&#xe616;搜索">
         </div>
+    </div>
+
+    <!-- 个人主页 -->
+    <div class="left_home">
+        <div class="left_le">
+            <div class="left_top">
+                <div class="backg">
+                    <img src="../img/bg.jpg" id="avatar">
+                    <ul>
+                        <li>昵称</li>
+                        <li>等级Lv</li>
+                        <li>签名</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="left_bottom">
+                <ul>
+                    <li><img src="../img/qq我的钱包.png" alt="">我的钱包 <img src="../img/next.png"></li>
+                    <li><img src="../img/qq个性装扮.png" alt="">我的个性装扮 <img src="../img/next.png"></li>
+                    <li><img src="../img/qq情侣空间.png" alt="">我的情侣空间 <img src="../img/next.png"></li>
+                    <li><img src="../img/qq我的收藏.png" alt="">我的收藏 <img src="../img/next.png"></li>
+                    <li><img src="../img/qq我的相册.png" alt="">我的相册 <img src="../img/next.png"></li>
+                    <li><img src="../img/qq我的文件.png" alt="">我的文件 <img src="../img/next.png"></li>
+                </ul>
+            </div>
+        </div>
+        <div class="left_ri"></div>
     </div>
 </body>
 <script src="../js/Main.js"></script>
