--- a/聊天系统/html/chatpage.html
+++ b/聊天系统/html/chatpage.html
@@ -9,14 +9,18 @@
 </head>
 <body>
     <div class="chatbox">
-        <div class="header"><span class="iconfont leftbtn">&#xe645;</span><span class="iconfont rightbtn">&#xe675;</span></div>
+        <div class="header"><span class="iconfont leftbtn">&#xe645;</span>
+            <span class="userid"></span>
+            <span class="iconfont rightbtn">&#xe675;</span></div>
+        <div class="mesbox"></div>
+        <div class="buttombox">
+            <input type="text" class="textbox">
+            <button class="send">发送</button>
+        </div>
     </div>
-    <div class="buttom">
-        <input type="text" class="textbox">
-        <button class="send">发送</button>
-    </div>
+    
 	<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
     <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.2/??flexible_css.js,flexible.js"></script>
-    
+    <script src="../js/chatpage.js"></script>
 </body>
 </html>
