--- a/聊天系统/html/Main.html
+++ b/聊天系统/html/Main.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1837326_68xgxlax9a.css">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1898437_izt0yre64fj.css">
     <script src="../js/checkScreen.js"></script>
+    <link rel="stylesheet" href="../css/Main.scss">
 </head>
 <body>
     <div class="out">
