--- a/聊天系统/Login.html
+++ b/聊天系统/Login.html
@@ -56,8 +56,8 @@
                     <input type="text" placeholder="请输入您的密码" value="">
                 </label>
                 <label class="loading" id="regist_nickname">
-                    <img src="img/用户.png" alt="">
-                    <input type="text"  placeholder="请输入您的昵称" value="">
+                    <img src="img/用户.png" alt="" style="margin-left: .5rem;">
+                    <input type="text"  placeholder="请输入您的昵称" value="" >
                 </label>
                 <label class="loading" id="regist_headimg">
                     <img src="img/用户.png" alt="">
