--- a/聊天系统/html/Main.html
+++ b/聊天系统/html/Main.html
@@ -56,7 +56,7 @@
                 <div class="notice_infomation">
                     <img src="../img/head_logo.jpg" class="notice_uheadimg">
                     <div class="notice_left">
-                        <div class="notice_information">
+                        <div class="notice_information1">
                             <p class="uname">kj</p>
                             <p class="send_time">5:30</p>
                         </div>
