--- a/聊天系统/Login.html
+++ b/聊天系统/Login.html
@@ -48,7 +48,7 @@
                     <input type="text" placeholder="请输入您的密码" value="">
                 </label>
                 <label class="loading" id="regist_nickname">
-                    <img src="img/用户.png" alt="">
+                    <img src="img/昵称.png" alt="">
                     <input type="text"  placeholder="请输入您的昵称" value="">
                 </label>
                 <label class="loading" id="regist_headimg">
@@ -57,7 +57,7 @@
                 </label>
             </div>
             <div class="footer">
-                <span id="regist_btn">注册</span>
+                <span id="regist_btn"></span>
             </div>
 
         </div>
