--- a/聊天系统/Login.html
+++ b/聊天系统/Login.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,viewport-fit=cover">
     <link rel="stylesheet" href="css/Login.css">
     <link rel="stylesheet" href="css/register.css">
+    <link rel="icon" href="./img/熊猫.png">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1837326_68xgxlax9a.css">
     <script src="js/checkScreen.js"></script>
     <script src="js/jquery-3.4.1/jquery-3.4.1.min.js"></script>
