--- a/聊天系统/html/Main.html
+++ b/聊天系统/html/Main.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/Main.css">
     <script src="../js/jquery-3.4.1/jquery-3.4.1.min.js"></script>
     <link rel="stylesheet" href="../css/personal_homepage.css">
+    <link rel="icon" href="../img/熊猫.png">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1837326_68xgxlax9a.css">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1898437_izt0yre64fj.css">
     <script src="../js/checkScreen.js"></script>
