--- a/聊天系统/html/Personal_homepage.html
+++ b/聊天系统/html/Personal_homepage.html
@@ -7,6 +7,7 @@
     <title>个人主页</title>
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
     <link rel="stylesheet" href="../css/personal_homepage.css">
+    <link rel="icon" href="../img/熊猫.png">
 </head>
 
 <body>
