--- a/聊天系统/html/chatpage.html
+++ b/聊天系统/html/chatpage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Document</title>
+    <link rel="icon" href="../img/熊猫.png">
     <link rel="stylesheet" href="../css/chatpage.css">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1899113_pnhtlvyrkm.css">
 </head>
