--- a/聊天系统/html/main_box.html
+++ b/聊天系统/html/main_box.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,viewport-fit=cover">
     <link rel="stylesheet" href="../css/Main.css">
     <link href="../css/main_box.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="../img/熊猫.png">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1898437_qfoc4umdr9.css">
-    <script src="../js/jquery-3.4.1/jquery-3.4.1.min.js"></script>
-    <script src="../js/checkScreen.js"></script>
 </head>
 <body>
     <div class="main">
@@ -31,5 +30,7 @@
         </div>
     </div>
 </body>
-<script src="../js/main_box.js"></script>
+<script src="../js/jquery-3.4.1/jquery-3.4.1.min.js"></script>
+<script src="../js/checkScreen.js"></script>
+<script defer src="../js/main_box.js"></script>
 </html>
