--- a/聊天系统/html/Main.html
+++ b/聊天系统/html/Main.html
@@ -101,7 +101,7 @@
                 <img src="../img/settings.png" id="log_out">
             </div>
             <div class="login_out_slider">
-                <a href="../Login.html"></a>
+                <a href="../Login.html">退出登录</a>
             </div>
         </div>
         <div class="left_ri"></div>
