--- a/聊天系统/Login.html
+++ b/聊天系统/Login.html
@@ -11,9 +11,13 @@
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1837326_68xgxlax9a.css">
     <script src="js/checkScreen.js"></script>
     <script src="js/jquery-3.4.1/jquery-3.4.1.min.js"></script>
+
 </head>
 <body>
     <div class="out">
+        <div class="tcbox">
+            <p>登陆成功</p>
+        </div>
         <div class="main loading_window">
 <!--                <div class="top">-->
 <!--                    <h2>Hi,</h2>-->
