--- a/聊天系统/html/main_box.html
+++ b/聊天系统/html/main_box.html
@@ -11,17 +11,20 @@
 </head>
 <body>
     <div class="main">
-        <iframe src="Main.html" class="main_window"></iframe
-        ><div class="footer">
+        <iframe src="Main.html" class="main_window"></iframe>
+        <div class="footer">
             <div class="container">
                 <span class="tomain_window">
                     <i class="iconfont icon-xiaoxi1 isclicked"></i>
                     <p>消息</p>
                 </span>
                 <span class="tofriend_window">
+                    <a href="好友列表.html">
                     <i class="iconfont icon-lianxiren"></i>
                     <p>联系人</p>
+                </a>
                 </span>
+                
                 <span class="toaction">
                     <i class="iconfont icon-dongtaijihuobeifen"></i>
                     <p>动态</p>
