--- a/聊天系统/html/main_box.html
+++ b/聊天系统/html/main_box.html
@@ -19,10 +19,10 @@
                     <p>消息</p>
                 </span>
                 <span class="tofriend_window">
-                    <a href="好友列表.html">
+                    <!-- <a href="好友列表.html"> -->
                     <i class="iconfont icon-lianxiren"></i>
                     <p>联系人</p>
-                </a>
+                <!-- </a> -->
                 </span>
                 
                 <span class="toaction">
