--- a/聊天系统/html/好友列表.html
+++ b/聊天系统/html/好友列表.html
@@ -38,13 +38,13 @@
                 </li>
             </ul>
         </div>
-        <div id="footer">
+        <!-- <div id="footer">
             <ul id="footerUl">
                 <li><img src="../img/消 息 1.png" alt=""></li>
                 <li><img src="../img/联系人(1).png" alt=""></li>
                 <li><img src="../img/动态.png" alt=""></li>
             </ul>
-        </div>
+        </div> -->
     </div>
 </body>
 <script src="../js/friendsLIist.js"></script>
