--- a/聊天系统/html/好友列表.html
+++ b/聊天系统/html/好友列表.html
@@ -15,18 +15,22 @@
         <div id="header">
             <div id="headPortrait"><img src="../img/avatar04.png" alt=""></div>
             <span>联系人</span>
-            <div id="addFriends"><img src="../img/添加朋友.png" alt=""></div>
-            <input id="search" type="text" placeholder="搜索">
+            <div id="addFriends"><img src="../img/avatar04.png" alt=""></div>
+            <!-- <input id="search" type="text" placeholder="搜索"> -->
         </div>
         <div id="content">
-            <ul id="classification">
+            <div id="newFriends">新朋友
+                <img src="../img/next.png" alt="">
+            </div>
+            <!-- <ul id="classification">
                 <li class="lei">好友</li>
                 <li class="lei">分组</li>
                 <li class="lei">群聊</li>
                 <li class="lei">设备</li>
-            </ul>
+            </ul> -->
             <ul id="friendsUl" style="overflow: scroll;">
-                <li class="friends"><span class='Logo'><img src="../img/联系人.png" alt=""></span>
+                <li class="friends">
+                    <span class='Logo'><img src="../img/联系人.png" alt=""></span>
                     <span class="nickname">李四1</span>
                     <span class="signature">I wish</span>
                     <button class="delete" data-role='none' style="display: inline;">删除</button>
