--- a/聊天系统/Login.html
+++ b/聊天系统/Login.html
@@ -18,9 +18,6 @@
 </head>
 <body>
     <div class="out">
-        <div class="tcbox">
-            <p>登陆成功</p>
-        </div>
         <div class="main loading_window">
                 <div class="middle">
                     <div class="loading">
@@ -49,7 +46,7 @@
                 </label>
                 <label class="loading" id="regist_password">
                     <img src="img/密码.png" alt="">
-                    <input type="text" placeholder="请输入您的密码" value="">
+                    <input type="password" placeholder="请输入您的密码" value="">
                 </label>
                 <label class="loading" id="regist_nickname">
                     <img src="img/昵称.png" alt="">
