--- a/聊天系统/html/Main.html
+++ b/聊天系统/html/Main.html
@@ -8,7 +8,10 @@
         content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,viewport-fit=cover">
     <link rel="stylesheet" href="../css/Main.css">
     <link rel="stylesheet" href="../css/personal_homepage.css">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1837326_68xgxlax9a.css">
+<!--    kj引入-->
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1898437_ka3995p6cb.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1898437_ke57mkjqby.css">
+
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1898437_izt0yre64fj.css">
     <!-- <link rel="stylesheet" href="../css/Main.scss"> -->
 
@@ -22,7 +25,7 @@
         <div class="main">
             <div class="top">
                 <img class="head_img" src="../img/head_logo.jpg">
-                <i class="iconfont icon-shizi"></i>
+                <i class="iconfont icon-shizicha"></i>
                 <div class="hidden_rigth">
                     <ul>
                         <li>
