--- a/聊天系统/html/search_all_user.html
+++ b/聊天系统/html/search_all_user.html
@@ -5,7 +5,7 @@
     <title>所有用户</title>
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,viewport-fit=cover">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1837326_68xgxlax9a.css">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1898437_izt0yre64fj.css">
+<!--    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1898437_izt0yre64fj.css">-->
     <link href="../css/search_all_user.css" type="text/css" rel="stylesheet">
 </head>
 <body>
