将网址存在对象中，便于后面修改

--- a/聊天系统/Login.html
+++ b/聊天系统/Login.html
@@ -52,10 +52,10 @@
                     <img src="img/昵称.png" alt="">
                     <input type="text"  placeholder="请输入您的昵称" value="">
                 </label>
-                <label class="loading" id="regist_headimg">
-                    <img src="img/用户.png" alt="">
-                    <input type="text"  placeholder="请输入您的头像" value="">
-                </label>
+<!--                <label class="loading" id="regist_headimg">-->
+<!--                    <img src="img/用户.png" alt="">-->
+<!--                    <input type="text"  placeholder="请输入您的头像" value="">-->
+<!--                </label>-->
             </div>
             <div class="footer">
                 <span id="regist_btn"></span>
