--- a/聊天系统/html/search_all_user.html
+++ b/聊天系统/html/search_all_user.html
@@ -18,7 +18,9 @@
                 <input type="text" class="iconfont search" placeholder="&#xe616;输入关键字">
                 <span class="cancel">取消</span>
             </div>
-            <div class="container"></div>
+            <div class="container">
+
+            </div>
         </div>
     </div>
 </body>
