--- a/聊天系统/html/好友列表.html
+++ b/聊天系统/html/好友列表.html
@@ -13,9 +13,9 @@
 <body>
     <div id="box">
         <div id="header">
-            <div id="headPortrait"><img src="../img/avatar04.png" alt=""></div>
+            <!-- <div id="headPortrait"><img src="../img/avatar04.png" alt=""></div> -->
             <span>联系人</span>
-            <div id="addFriends"><img src="../img/avatar04.png" alt=""></div>
+            <!-- <div id="addFriends"><img src="../img/avatar04.png" alt=""></div> -->
             <!-- <input id="search" type="text" placeholder="搜索"> -->
         </div>
         <div id="content">
@@ -29,7 +29,7 @@
                 <li class="lei">设备</li>
             </ul> -->
             <ul id="friendsUl" style="overflow: scroll;">
-                <li class="friends">
+                <!-- <li class="friends">
                     <span class='Logo'><img src="../img/联系人.png" alt=""></span>
                     <span class="nickname">李四1</span>
                     <span class="signature">I wish</span>
@@ -39,7 +39,7 @@
                     <span class="nickname">李四1</span>
                     <span class="signature">I wish</span>
                     <button class="delete" data-role='none'>删除</button>
-                </li>
+                </li> -->
             </ul>
         </div>
         <!-- <div id="footer">
