--- a/聊天系统/html/resfriend.html
+++ b/聊天系统/html/resfriend.html
@@ -10,6 +10,10 @@
 <body>
     <div class="header">
         <span class="iconfont leftbtn icon-arrow-left"></span>
+        <span class="addfriend">添加</span>
+    </div>
+    <div class="addfriendbox">
+        
     </div>
 
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
