--- a/聊天系统/html/main_box.html
+++ b/聊天系统/html/main_box.html
@@ -17,6 +17,7 @@
                 <span class="tomain_window">
                     <i class="iconfont icon-xiaoxi1 isclicked"></i>
                     <p>消息</p>
+                    <span class="information_num">0</span>
                 </span>
                 <span class="tofriend_window">
                     <!-- <a href="好友列表.html"> -->
