提交本地代码并修改最新代码

--- a/聊天系统/html/resfriend.html
+++ b/聊天系统/html/resfriend.html
@@ -12,9 +12,7 @@
         <span class="iconfont leftbtn icon-arrow-left"></span>
         <span class="addfriend">添加</span>
     </div>
-    <div class="addfriendbox">
-        
-    </div>
+    <div class="addfriendbox"></div>
 
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
     <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.2/??flexible_css.js,flexible.js"></script>
