--- a/聊天系统/html/好友列表.html
+++ b/聊天系统/html/好友列表.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>聊天页面</title>
     <!-- <script src="js/jquery-3.5.1.js"></script> -->
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="../js/jquery-3.4.1/jquery-3.4.1.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script src="../js/jquery.mobile-1.4.5/jquery.mobile-1.4.5.js"></script>
     <!-- <script src='js/zepto.min.1.1.6.js'></scrip-->
     <link rel="stylesheet" href="../css/friendsStyle.css">
