--- a/聊天系统/html/翻牌游戏.html
+++ b/聊天系统/html/翻牌游戏.html
@@ -11,6 +11,12 @@
             margin:0;
             padding:0;
         }
+        #back{
+            width: 40px;
+            height: 30px;
+            position: absolute;
+            top:0;
+        }
         .game_box{
             /* width: 600px;
             height: 650px; */
@@ -91,6 +97,7 @@
 </head>
 <body>
     <div class="game_box">
+        <img src="../img/返回.png" alt="" id="back">
         <h2>翻牌消除游戏</h2>
         <div class="game_information">
             <span>点击次数:<p id="clickTime">0</p>Moves</span>
@@ -209,7 +216,10 @@
             }
             addimg();
         }
-
+        var back = document.querySelector('#back');
+            back.addEventListener('click', function () {
+                location.href = 'gamelist.html';
+            })
     </script>
     <script src="../js/checkScreen.js"></script>
 </body>
