--- a/聊天系统/html/main_box.html
+++ b/聊天系统/html/main_box.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="main">
-        <iframe src="Main.html" class="main_window"></iframe>
+        <iframe src="" class="main_window"></iframe>
         <div class="footer">
             <div class="container">
                 <span class="tomain_window">
