--- a/聊天系统/html/gamelist.html
+++ b/聊天系统/html/gamelist.html
@@ -40,7 +40,7 @@
 <script>
     var back=document.querySelector('#back');
     back.addEventListener('click',function(){
-        location.href = 'developmen.html';
+        location.href = 'main_box.html';
     })
 </script>
 </html>
