提交本地代码并修改最新代码

--- a/聊天系统/html/resfriend.html
+++ b/聊天系统/html/resfriend.html
@@ -6,6 +6,8 @@
     <title></title>
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1899113_pnhtlvyrkm.css">
     <link rel="stylesheet" href="../css/resfriend.css">
+    <link rel="stylesheet" href="../css/alert.css">
+    <script src='../js/alert.js'></script>
 </head>
 <body>
     <div class="header">
