--- a/聊天系统/html/好友列表.html
+++ b/聊天系统/html/好友列表.html
@@ -9,6 +9,8 @@
     <script src="../js/jquery.mobile-1.4.5/jquery.mobile-1.4.5.js"></script>
     <!-- <script src='js/zepto.min.1.1.6.js'></scrip-->
     <link rel="stylesheet" href="../css/friendsStyle.css">
+    <link rel="stylesheet" href="../css/alert.css">
+    <script src='../js/alert.js'></script>
 </head>
 <body>
     <div id="box">
