--- a/聊天系统/html/gamelist.html
+++ b/聊天系统/html/gamelist.html
@@ -11,31 +11,47 @@
         }
         body{
             width:100%;
-            height:700px;
+            height:736px;
             background-image: linear-gradient(to bottom,#1AC0BC,#8F8ACA);
+        }
+        #box{
+            width:100%;
+            height: 736px;
+            position: relative;
         }
         #back{
             width: 40px;
             height: 30px;
         }
+        /* #gameUl{
+            display: flex;
+            justify-content: space-between;
+            align-items:stretch;
+        } */
         #gameUl .gameLi{
-            width: 100%;
-            height:40px;
+            width: 200px;
+            height:60px;
+            line-height: 60px;
             font-size: 20px;
+            margin-bottom: 10px;
+            display: inline-block;
+            background-color: blueviolet;
+            border-radius: 10px;
         }
         #gameUl .gameLi img{
-            width: 30px;
-            height:30px;
+            width: 20px;
+            height:20px;
         }
     </style>
 </head>
 <body>
     <img src="../img/返回.png" alt="" id="back">
+    <div id="box">
     <ul id="gameUl">
-        <a href="../html/翻牌游戏.html"><li class="gameLi"><img src="../img/棋牌.png">翻牌游戏</li></a>
-        <a href="../html/猜颜色.html"><li class="gameLi"><img src="../img/字典.png">看字选颜色游戏</li></a>
-        <a href="../html/点灯笼.html"><li class="gameLi"><img src="../img/灯笼.png">点灯笼游戏</li></a>
-    </ul>
+        <li class="gameLi"><a href="../html/翻牌游戏.html"><img src="../img/棋牌.png">翻牌游戏</a></li>
+        <li class="gameLi"><a href="../html/猜颜色.html"><img src="../img/字典.png">看字选颜色游戏</a></li>
+        <li class="gameLi"><a href="../html/点灯笼.html"><img src="../img/灯笼.png">点灯笼游戏</a></li>
+</div>
 </body>
 <script>
     var back=document.querySelector('#back');
