修改右边隐藏栏bug

--- a/聊天系统/html/chatpage.html
+++ b/聊天系统/html/chatpage.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <link rel="icon" href="../img/熊猫.png">
     <link rel="stylesheet" href="../css/chatpage.css">
+    <link rel="stylesheet" href="../css/alert.css">
+    <script src='../js/alert.js'></script>
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1899113_pnhtlvyrkm.css">
 </head>
 <body>
